--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>This is a Header</h1>
     <p>This is a paragraph</p>
-    <p> This is second paragraph</p>
-
+    <p>This is second paragraph</p>
+    <p>This is the third paragraph</p>
 </body>
 </html>
